--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ footer {
 
 	.btn-des {
 		margin-left: 35%;
-		background-color: grey;
+		background-color: lightgrey;
 	}
 
 }
@@ -322,6 +322,7 @@ footer {
 
 	.btn-des {
 		margin-left: 40%;
+		background-color: lightgrey;
 	}
 }
 
