--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ a:hover {
 }*/
 
 #index-anchor {
-	
+
 	color: white;
 }
 
@@ -261,7 +261,7 @@ footer {
 
 	.btn-des {
 		margin-left: 35%;
-		background-color: lightgrey;
+		background-color: grey;
 	}
 
 }
@@ -323,7 +323,7 @@ footer {
 
 	.btn-des {
 		margin-left: 40%;
-		background-color: lightgrey;
+		background-color: grey;
 	}
 }
 
