--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ footer {
 
 	.btn-des {
 		margin-left: 35%;
-		background-color: grey;
+		background-color: lightgrey;
 	}
 
 }
@@ -323,7 +323,7 @@ footer {
 
 	.btn-des {
 		margin-left: 40%;
-		background-color: grey;
+		background-color: lightgrey;
 	}
 }
 
