--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,6 +292,10 @@ label {
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
+	#index-btn {
+		font-size: 18px;
+	}
+
 	img[alt*="header-img"] {
 		height: 25vh;
 		
