--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ label {
 /*Media Queries*/
 
 /* Mobile Styles */
-@media only screen and (min-width: 100px) and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 	#index-btn {
 		word-wrap: break-word;
 	}
@@ -335,7 +335,7 @@ label {
 	}
 	
 	.carousel-inner {
-		max-width: 350px;
+		width: 350px;
 	}
 
 
